	  NTFS_MNT_CASE_SENSITIVE.  (Yura)
	- Treat filenames in POSIX namespace as case insensitive in case of
	  case insensitive mounts.  (Anton, Yura)
	- Windows cares only about first 4 records in $MFTMirr and ignores
	  everything beyond them. Update libntfs behaviour to be like in
	  windows.  (Yura)
	- ntfsmount: Fix free clusters and MFT records calculation.  (Yura)
	- ntfsmount: Fix st_blocks calculation.  (Yuval, Yura)
	- ntfsmount: Umount volume in DESTROY. This is guarantees that all
	  data would be synced before umount return for volumes mounted with
	  blkdev option.  (Yura)
	- Introduce MNT_NTFS_NOT_EXCLUSIVE mount option that tells libntfs do
	  not open volume exclusively. Useful if libntfs user cares about this
	  himself, eg. FUSE with blkdev option.  (Yura)
	- Empty the journal at mount time.  (Anton)
	- Set the volume dirty bit at mount time (if it is not set already and
	  clear it again at umount time but only if it was not set to start
	  with.  (Anton)
	- Introduce NTFS_MNT_FORENSIC mount option for logfile dumping for
	  example otherwise the logfile gets wiped out by the mount attempt if
	  it is not read-only.  Also use it for ntfsresize as it wishes to do
	  its own logfile emptying and volume dirtying.  (Anton)
	- Raise FUSE dependence to 2.6.1 (the most stable and featured ATM),
	  rename --enable-fuse-module to more clear --enable-ntfsmount and
	  cleanup autotools scripts a bit.  (Yura)
	- ntfsclone: don't check free space if output file is FIFO.  (Andree
	  Leidenfrost)
	- Turn ntfs_pathname_to_inode() into ntfs_pathname_to_inode_num() which
	  returns ntfs inode number instead of opened inode itself.
	  Reimplement ntfs_pathname_to_inode() as wrapper to new API.  (Yura)
	- ntfsmount: fix rename if destination already exists.  (Yura)
	- ntfsfix: do not set VOLUME_MOUNTED_ON_NT4 flag as it causes Vista to
	  not boot any more.
	- Implement ntfs_pread() and ntfs_pwrite() in terms of device